--- a/index-components.html
+++ b/index-components.html
@@ -22,7 +22,7 @@
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-explore block text-xs">Wigets</span>
                 </a>
-                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-kategori block text-xs">Pages</span>
                 </a>
@@ -42,23 +42,22 @@
         </section>
 
     <!-- PAGE TITLE -->
-    <h1 class="text-xs ml-4 mt-3 text-gray-700 dark:text-gray-400">OVERVIEW</h1>
+    <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white ">Wigets</h1>
     
             <!-- CARD#2 -->
             <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
                 <div class="p-5">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
-                    <hr class="bg-slate-500 dark:bg-slate-800">
+                    <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
-                    <hr class="bg-slate-500 dark:bg-slate-800">
+                    <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
-                    <hr class="bg-slate-500 dark:bg-slate-800">
+                    <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
-                    <hr class="bg-slate-500 dark:bg-slate-800">
+                    <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
-                    <hr class="bg-slate-500 dark:bg-slate-800">
-                    <hr>
+                    <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                 </div>
             </div>
 
