--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-explore block text-xs">Wigets</span>
                 </a>
-                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-kategori block text-xs">Pages</span>
                 </a>
@@ -42,7 +42,7 @@
         </section>
 
         <!-- PAGE TITLE -->
-        <h1 class="text-xs ml-4 mt-3 text-gray-700 dark:text-gray-400">OVERVIEW</h1>
+        <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
         <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white ">Home</h1>
 
         <!-- CARD#1 -->
@@ -58,21 +58,17 @@
             </div>
           </div>
   
-
-          
-          
-
           <!-- OUR PROJECTS -->
     <div class="columns-2 mx-4 mt-5">
           <div class="gap-8 relative ">
-            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1636955903101-d6b4b926018c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHZlY3RvcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" />
+            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
                 <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
                     View
                 </button>
           </div>
 
           <div class="gap-8 relative ">
-            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1636955903101-d6b4b926018c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHZlY3RvcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" />
+            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
                 <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
                     View
                 </button>
@@ -98,8 +94,8 @@
   
 
         <!-- FOOTER -->
-        <footer class="p-4 my-5 mx-4 bg-white rounded-xl shadow-lg md:flex md:items-center md:justify-between md:p-6 dark:bg-slate-800">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="#" class="hover:underline">Company</a>. All Rights Reserved.
+        <footer class="p-4 my-5 mx-4 rounded-xl shadow-lg md:flex md:items-center md:justify-between md:p-6 bg-slate-100 dark:bg-slate-800">
+            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="#" class="hover:underline">NotExistedCompany</a>. All Rights Reserved.
             </span>
             <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0">
                 <li>
