--- a/index.html
+++ b/index.html
@@ -10,110 +10,128 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
 </head>
 
-<!--FOOTER NAVIGATION BAR-->
-<body class="bg-slate-100 dark:bg-slate-900 content-center ">
-    <div class="w-full h-screen">
-        <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow-3xl">
-            <div id="tabs" class="flex justify-between backdrop-filter backdrop-blur-xl ">
-                <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="extension-puzzle"></ion-icon>
-                    <span class="tab tab-explore block text-xs">Wigets</span>
-                </a>
-                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="book"></ion-icon>
-                    <span class="tab tab-kategori block text-xs">Pages</span>
-                </a>
-                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="home"></ion-icon>
-                    <span class=" block text-xs">Home</span>
-                </a>
-                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="contrast-sharp"></ion-icon>
-                    <span class=" block text-xs">Theme</span>
-                </a>
-                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="search"></ion-icon>
-                    <span class="tab tab-account block text-xs">Search</span>
-                </a>
-            </div>
-        </section>
+<!--FOOTER NAVIGATION BAR--><body class="bg-slate-100 dark:bg-slate-900 content-center ">
+<div class="w-full h-screen">
+    <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
+    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow-3xl">
+        <div id="tabs" class="flex justify-between backdrop-filter backdrop-blur-xl ">
+            <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="extension-puzzle"></ion-icon>
+                <span class="tab tab-explore block text-xs">Wigets</span>
+            </a>
+            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="book"></ion-icon>
+                <span class="tab tab-kategori block text-xs">Pages</span>
+            </a>
+            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="home"></ion-icon>
+                <span class=" block text-xs">Home</span>
+            </a>
+            <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="contrast-sharp"></ion-icon>
+                <span class=" block text-xs">Theme</span>
+            </a>
+            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="search"></ion-icon>
+                <span class="tab tab-account block text-xs">Search</span>
+            </a>
+        </div>
+    </section>
 
-        <!-- PAGE TITLE -->
-        <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-        <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white ">Home</h1>
+    <!--PAGE TITLE-->
+    <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
+    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white ">Home</h1>
 
-        <!-- CARD#1 -->
-        <div class="rounded-xl overflow-hidden shadow-lg mr-4 ml-4 mt-5">
-            <img class="w-full" src="https://images.unsplash.com/photo-1677871117050-218ae53a723b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60" alt="Sunset in the mountains">
-            <div class="px-6 py-4 bg-slate-200 dark:bg-slate-800 dark:border-gray-700">
-              <h1 class="font-bold text-xl mb-2 dark:text-white">Card Title</h1>
-              <p class="text-gray-700 text-base dark:text-gray-400">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptatibus quia, nulla! Maiores et perferendis eaque,
-                exercitationem praesentium nihil.
-              </p>
-            </div>
-          </div>
+    <!--CARD#1-->
+    <div class="rounded-xl overflow-hidden shadow-lg mr-4 ml-4 mt-5">
+        <img class="w-full" src="https://images.unsplash.com/photo-1677871117050-218ae53a723b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60" alt="Sunset in the mountains">
+        <div class="px-6 py-4 bg-slate-200 dark:bg-slate-800 dark:border-gray-700">
+            <h1 class="font-bold text-xl mb-2 dark:text-white">Card Title</h1>
+            <p class="text-gray-700 text-base dark:text-gray-400">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Voluptatibus quia, nulla! Maiores et perferendis eaque,
+            exercitationem praesentium nihil.
+            </p>
+        </div>
+        </div>
   
-          <!-- OUR PROJECTS -->
-    <div class="columns-2 mx-4 mt-5">
-          <div class="gap-8 relative ">
-            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
-                <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                    View
-                </button>
-          </div>
+        <!--OUR PROJECTS-->
+<div class="columns-2 mx-4 mt-5">
+        <div class="gap-8 relative ">
+        <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
+            <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
+                View
+            </button>
+        </div>
 
-          <div class="gap-8 relative ">
-            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
-                <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                    View
-                </button>
-          </div>
-    </div>
+        <div class="gap-8 relative ">
+        <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
+            <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
+                View
+            </button>
+        </div>
+</div>
         
 
-        <!-- CARD#2 -->
-        <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
-            <div class="p-5">
-                <h5 class="mb-1 text-2xl font-bold tracking-tight text-center text-gray-900 dark:text-white">Our Service</h5>
-                <h6 class="mb-1 font-normal text-yellow-500 text-center ">Example</h6>
-                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                    Here are the biggest enterprise technology acquisitions of 2021 so far,
-                    in reverse chronological order.
-                </p>
-            </div>
+    <!--CARD#2-->
+    <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
+        <div class="p-5">
+            <h5 class="mb-1 text-2xl font-bold tracking-tight text-center text-gray-900 dark:text-white">Our Service</h5>
+            <h6 class="mb-1 font-normal text-yellow-500 text-center ">Example</h6>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                Here are the biggest enterprise technology acquisitions of 2021 so far,
+                in reverse chronological order.
+            </p>
+        </div>
+    </div>
+
+    <div id="default-carousel" class="" data-carousel="slide">
+        <!-- Carousel wrapper -->
+        <div class=" h-56 overflow-hidden rounded-xl mx-4 my-5 z-10">
+            <div class="gap-8 relative ">
+                <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
+                    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
+                        View
+                    </button>
+                </div>
+        
+                <div class="gap-8 relative ">
+                <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
+                    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
+                        View
+                    </button>
+        </div>
         </div>
 
 
+    <!--FOOTER-->
+    <footer class="p-4 my-5 mx-4 rounded-xl shadow-lg md:flex md:items-center md:justify-between md:p-6 bg-slate-100 dark:bg-slate-800">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="#" class="hover:underline">NotExistedCompany</a>. All Rights Reserved.
+        </span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0">
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+            </li>
+            <li>
+                <a href="#" class="hover:underline">Contact</a>
+            </li>
+        </ul>
+    </footer>
 
 
-  
+<!--IONICONS-->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-        <!-- FOOTER -->
-        <footer class="p-4 my-5 mx-4 rounded-xl shadow-lg md:flex md:items-center md:justify-between md:p-6 bg-slate-100 dark:bg-slate-800">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="#" class="hover:underline">NotExistedCompany</a>. All Rights Reserved.
-            </span>
-            <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0">
-                <li>
-                    <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-                </li>
-                <li>
-                    <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline">Contact</a>
-                </li>
-            </ul>
-        </footer>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
 </body>
 </html>
