--- a/index-components.html
+++ b/index-components.html
@@ -48,7 +48,8 @@
             <!-- CARD#2 -->
             <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
                 <div class="p-5">
-                    <a href="" class="text-gray-300 dark:">Alerts</a>
+                    <a href="" class="text-gray-300 dark:">
+                        Alerts</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
