--- a/index-theme.html
+++ b/index-theme.html
@@ -11,11 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-slate-100 dark:bg-slate-900" >
+<body class="bg-slate-100 dark:bg-slate-900" width="100" height="100" >
 
     <!-- PAGE TITLE -->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Search</h1>
+    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Theme</h1>
 
    <!--FOOTER NAVIGATION BAR-->
 <body class="bg-slate-100 dark:bg-slate-900 content-center ">
@@ -46,34 +46,8 @@
             </div>
         </section>
 
-        <!-- SEARCH BAR --> 
 
-<form class="flex items-center mx-4 my-5">   
-    <label for="simple-search" class="sr-only">Search</label>
-    <div class="relative w-full">
-        <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-            <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
-        </div>
-        <input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-xl focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-slate-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search" required>
-    </div>
-
-</form>
-
-        <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
-            <div class="p-5">
-                <h5 class="mb-1 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Actual</h5>
-                <a href="#" class="text-blue-400">google.com</a>
-                <hr class="mt-2">
-                <a href="#" class="text-blue-400">youtube</a>
-                <hr class="mt-2">
-                <a href="#" class="text-blue-400">apple.com</a>
-                <hr class="mt-2">
-                <a href="#" class="text-blue-400">how to...</a>
-                <hr class="mt-2">
-            </div>
-        </div>
-
-        
+    
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
