--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
 </head>
-
-<!--FOOTER NAVIGATION BAR--><body class="bg-slate-100 dark:bg-slate-900 content-center ">
+<body class="bg-slate-100 dark:bg-slate-900 content-center ">
 <div class="w-full h-screen">
     <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
     <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow-3xl">
@@ -22,20 +21,20 @@
                 <ion-icon name="extension-puzzle"></ion-icon>
                 <span class="tab tab-explore block text-xs">Wigets</span>
             </a>
-            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="book"></ion-icon>
                 <span class="tab tab-kategori block text-xs">Pages</span>
             </a>
-            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="home"></ion-icon>
                 <span class=" block text-xs">Home</span>
             </a>
             <a href="#themeSettings" data-modal-target="themeSettings" data-modal-toggle="themeSettings"
-            class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+            class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="contrast-sharp"></ion-icon>
                 <span class=" block text-xs">Theme</span>
             </a>
-            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="search"></ion-icon>
                 <span class="tab tab-account block text-xs">Search</span>
             </a>
@@ -97,38 +96,6 @@
     </div>
 
 
-    <!--CAROUSEL-->
-    <div id="default-carousel" class="inline-grid" data-carousel="slide">
-        <!-- Carousel wrapper -->
-        <div class=" mx-4 mt-5 grid">
-            <div class=" relative hidden duration-700 ease-in-out h-56" data-carousel-item>
-                <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg
-                "
-                 src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
-                    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                        View
-                    </button>
-            </div>
-        
-            <div class=" relative hidden duration-700 ease-in-out h-56" data-carousel-item>
-                <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg
-                " 
-                src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
-                    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                        View
-                    </button>
-                </div>
-
-            <div class=" relative hidden duration-700 ease-in-out h-56" data-carousel-item>
-                <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg
-                " 
-                src="https://images.unsplash.com/photo-1487014679447-9f8336841d58?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8c2l0ZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1400&q=60" />
-                    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                        View
-                    </button>
-                </div>
-        </div>
-    </div>
 
 
     <!--FOOTER-->
