--- a/index-components.html
+++ b/index-components.html
@@ -22,19 +22,19 @@
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-explore block text-xs">Wigets</span>
                 </a>
-                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-kategori block text-xs">Pages</span>
                 </a>
-                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class=" block text-xs">Home</span>
                 </a>
-                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class=" block text-xs">Theme</span>
                 </a>
-                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-account block text-xs">Search</span>
                 </a>
@@ -48,12 +48,11 @@
             <!-- CARD#2 -->
             <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
                 <div class="p-5">
-                    <a href="" class="text-gray-300 dark:">
-                        Alerts</a>
+                    <a href="" class="text-gray-300 text-xl">Alerts</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
-                    <a href="" class="text-gray-300 dark:">Alerts</a>
+                    <a href="" class="text-gray-300 dark:">Button</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
-                    <a href="" class="text-gray-300 dark:">Alerts</a>
+                    <a href="" class="text-gray-300 dark:">Heading</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
                     <a href="" class="text-gray-300 dark:">Alerts</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 mt-2">
