--- a/index-search.html
+++ b/index-search.html
@@ -15,8 +15,7 @@
 
     <!-- PAGE TITLE -->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Search</h1>
-
+    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Search</yellow
    <!--FOOTER NAVIGATION BAR-->
 <body class="bg-slate-100 dark:bg-slate-900 content-center ">
     <div class="w-full h-screen">
@@ -27,19 +26,19 @@
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-explore block text-xs">Wigets</span>
                 </a>
-                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-kategori block text-xs">Pages</span>
                 </a>
-                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class=" block text-xs">Home</span>
                 </a>
-                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="#" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class=" block text-xs">Theme</span>
                 </a>
-                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-blue-500 hover:text-blue-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-account block text-xs">Search</span>
                 </a>
