--- a/index-pages.html
+++ b/index-pages.html
@@ -12,35 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
 </head>
-<!--FOOTER NAVIGATION BAR-->
-<body class="bg-slate-100 dark:bg-slate-900 content-center">
-    <div class="w-full h-screen">
-        <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow-3xl">
-            <div id="tabs" class="flex justify-between backdrop-filter backdrop-blur-xl ">
-                <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="extension-puzzle"></ion-icon>
-                    <span class="tab tab-explore block text-xs">Wigets</span>
-                </a>
-                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="book"></ion-icon>
-                    <span class="tab tab-kategori block text-xs">Pages</span>
-                </a>
-                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="home"></ion-icon>
-                    <span class=" block text-xs">Home</span>
-                </a>
-                <a href="#themeSettings" data-modal-target="themeSettings" data-modal-toggle="themeSettings" 
-                class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="contrast-sharp"></ion-icon>
-                    <span class=" block text-xs">Theme</span>
-                </a>
-                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="search"></ion-icon>
-                    <span class="tab tab-account block text-xs">Search</span>
-                </a>
-            </div>
-        </section>
+<body class="bg-slate-100 dark:bg-slate-900">
 
     <!--Page Title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400 ">OVERVIEW</h1>
@@ -121,7 +93,35 @@ localStorage.theme = 'dark'
       </div>
   </div>
 
-
+<!--Footer Navigation Bar-->
+<div class="w-full h-screen">
+    <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
+    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+        <div id="tabs" class="flex justify-between">
+            <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="extension-puzzle"></ion-icon>
+                <span class="tab tab-explore block text-xs">Wigets</span>
+            </a>
+            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="book"></ion-icon>
+                <span class="tab tab-kategori block text-xs">Pages</span>
+            </a>
+            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="home"></ion-icon>
+                <span class="tab tab-explore block text-xs">Home</span>
+            </a>
+            <a href="#themeSettings" data-modal-target="themeSettings" data-modal-toggle="themeSettings"
+            class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="contrast-sharp"></ion-icon>
+                <span class="tab tab-wishlist block text-xs">Theme</span>
+            </a>
+            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="search"></ion-icon>
+                <span class="tab tab-account block text-xs">Search</span>
+            </a>
+        </div>
+    </section>
+</div>
   
   
     <!--Flowbite for modal window-->
