--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
 </head>
-<body class="bg-slate-100 dark:bg-slate-900 ">
+<body class="bg-slate-100 dark:bg-slate-900">
 
     <!--PAGE TITLE-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
@@ -138,24 +138,24 @@
         <div id="tabs" class="flex justify-between">
             <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="extension-puzzle"></ion-icon>
-                <span class="tab tab-explore block text-xs">Wigets</span>
+                <span class="tab tab-wigets block text-xs">Wigets</span>
             </a>
             <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="book"></ion-icon>
-                <span class="tab tab-kategori block text-xs">Pages</span>
+                <span class="tab tab-pages block text-xs">Pages</span>
             </a>
             <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="home"></ion-icon>
-                <span class="tab tab-explore block text-xs">Home</span>
+                <span class="tab tab-home block text-xs">Home</span>
             </a>
             <a href="#themeSettings" data-modal-target="themeSettings" data-modal-toggle="themeSettings"
             class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="contrast-sharp"></ion-icon>
-                <span class="tab tab-wishlist block text-xs">Theme</span>
+                <span class="tab tab-theme block text-xs">Theme</span>
             </a>
             <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="search"></ion-icon>
-                <span class="tab tab-account block text-xs">Search</span>
+                <span class="tab tab-search block text-xs">Search</span>
             </a>
         </div>
     </section>
