--- a/index-components.html
+++ b/index-components.html
@@ -28,7 +28,7 @@
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="albums-outline"></ion-icon>Cards</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
-                    <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="create-outline"></ion-icon>Tables</a>
+                    <a href="components/tables.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="create-outline"></ion-icon>Tables</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/upload-flies.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="document-outline"></ion-icon>Upload Files</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
