--- a/index-components.html
+++ b/index-components.html
@@ -30,13 +30,17 @@
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/tables.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="create-outline"></ion-icon>Tables</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
-                    <a href="components/upload-flies.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="document-outline"></ion-icon>Upload Files</a>
+                    <a href="components/upload-flies.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="cloud-upload-outline"></ion-icon>Upload Files</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/dropdowns.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="caret-down-outline"></ion-icon>Dropdowns</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/toggle.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="toggle-outline"></ion-icon>Toggles</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/back-to-top.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="arrow-up-outline"></ion-icon>Back to Top</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/breadcrumbs.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="ellipsis-horizontal-outline"></ion-icon>Breadcrumbs</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/charts.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="pie-chart-outline"></ion-icon>Charts</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                 </div>
             </div>
