--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
     <!--Modal Window-->
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <div x-data="{ modelOpen: false }">
+        <div @click="modelOpen =!modelOpen" class="flex items-center justify-center px-3 py-2 space-x-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-blue-400 rounded-md">
+            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+            </svg>
+            <span>modal</span>
+        </div>
         <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
             <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
                 <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
@@ -128,7 +133,6 @@
                     
             </div>
         </div>
-    </div>
 
 
     <!--Footer Navigation Bar-->
