--- a/index-components.html
+++ b/index-components.html
@@ -94,7 +94,7 @@
            
         
 <!--Footer Navigation Bar-->
-<div class="w-full h-screen">
+<div class="w-full h-screen fixed">
     <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
         <div id="tabs" class="flex justify-between">
             <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
