--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen">
+    <div class="w-full h-screen fixed">
         <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <!--Wigets-->
