--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <!--Footer-->
-    <footer class="p-4 my-5 mx-4 rounded-xl shadow-lg bg-slate-200 dark:bg-neutral-800">
+    <footer class="p-4 mt-5 mb-20 mx-4 rounded-xl shadow-lg bg-slate-200 dark:bg-neutral-800">
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="#">NotExistedCompany</a>. All Rights Reserved.</span>
         <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0">
             <li>
