--- a/index-pages.html
+++ b/index-pages.html
@@ -62,9 +62,9 @@
         <!--Empty Modal-->
         <!--Overlay element-->
         <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
-
+            
         <!--Modal Body-->
-        <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+        <div id="modalEmpty" class="text-center w-4/5 z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translatbg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
         <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
         <p class="text-sm text-gray-500 px-8">
             There is nothing here yet...
@@ -73,7 +73,7 @@
             class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
             Cancel
         </button>
-
+            
         </div>
 
 
